platform/workloads/kyverno-policies/disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
  annotations:
    policies.kyverno.io/title: Disallow Root User
    policies.kyverno.io/description: >-
      Containers should not run as root. This policy ensures
      runAsNonRoot is set to true on all containers.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-runAsNonRoot
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
         any:
           - resources:
               namespaces:
                  - monitoring
                  - kyverno
                  - argocd
                  - kube-system
      validate:
        message: "Running as root is not allowed. Set runAsNonRoot: true in your securityContext."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
