platform/workloads/kyverno-policies/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
  annotations:
    policies.kyverno.io/title: Require Labels
    policies.kyverno.io/description: >-
      All pods must have an app label for identification
      and proper routing by services.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-labels
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - default
       exclude:
         any:
           - resources:
               namespaces:
                  - monitoring
                  - kyverno
                  - argocd
                  - kube-system
      validate:
        message: "Pod must have an 'app' label."
        pattern:
          metadata:
            labels:
              app: "?*"
